# k8s-test

./: .bandit  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  METALLB_AUTOSCALING_UPDATES.md  MICROK8S_DEPLOY.md  Makefile  README.md  TROUBLESHOOTING.md  deploy-microk8s.sh  deploy-windows.ps1  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependency-updates.yml  release.yml
k8s/: configmap.yaml  deployment.yaml  green-deployment.yaml  monitoring.yaml
scripts/: ci-local.ps1  ci-local.sh  validate-k8s.ps1  validate-k8s.sh
src/: __init__.py  main.py
tests/: test_main.py
